@@ -26,26 +26,6 @@
 #ifndef inhabitants_of_britain_ghul
 #define inhabitants_of_britain_ghul
 
-
-CHAR ch_Olin_the_Ghast {
-        name      "Olin";
-        species   ghast;
-        occ       fighter;
-        sprite    s_ghost;
-        hp        30;
-        xp        0;
-        cond      U;
-        str       100;
-        intl      100;
-        dex       100;
-        magic     100;
-        lvl       3;
-        conv      null;  // TODO: Give Olin something to say
-        readied {
-        }
-} // CHAR ch_Olin_the_Ghast
-
-
 CHAR ch_Gen {
     name     "Gen"
     species  human
@@ -64,6 +44,7 @@ CHAR ch_Gen {
         t_sword
         t_sm_shield
     }
+    
 } // CHAR ch_Gen
 
 
@@ -92,10 +73,11 @@ CHAR ch_Hawknoz {
     magic    200
     lvl      3
     conv     c_Hawknoz
-    sched    sched_Hawknoz
     readied {
         t_dagger
     }
+    sched    sched_Hawknoz
+    
 } // CHAR ch_Hawknoz
 
 
@@ -115,6 +97,7 @@ CHAR ch_Joan {
     conv     c_Joan
     readied {
     }
+    
 } // CHAR ch_Joan
 
 
@@ -134,6 +117,7 @@ CHAR ch_John_the_Armourer {
     conv     c_armourer
     readied {
     }
+    
 } // CHAR ch_John_the_Armourer
 
 
@@ -153,6 +137,7 @@ CHAR ch_Jeff_the_Weaponsmith {
     conv     c_weaponsmith
     readied {    
     }
+    
 } // CHAR ch_Jeff_the_Weaponsmith
 
 
@@ -173,6 +158,7 @@ CHAR ch_Golin_the_Healer {
     readied {
         t_dagger
     }
+    
 } // CHAR ch_Golin_the_Healer
 
 
@@ -194,6 +180,7 @@ CHAR ch_Sly_the_Thief {
         t_sword
         t_dagger
     }       
+    
 } // CHAR ch_Sly_the_Thief
 
 
